# ff-storage

./: .gitignore  .gitlab-ci-manual-release.yml  .gitlab-ci.yml  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  MR_DESCRIPTION.md  README.md  RELEASE_NOTES_v3.4.0.md  pyproject.toml
.claude/commands/: commit-push.md
docs/: BRANDING.md  MANUAL_RELEASE.md  PACKAGE_INSTALLATION.md  PUBLISHING_SETUP.md  TYPE_MAPPING.md  quickstart_v3.md
docs/api/: pydantic_orm.md  temporal_strategies.md
docs/guides/: strategy_selection.md
ff-cli/: README.md  pyproject.toml
ff-cli/example_plugin/: README.md  pyproject.toml
ff-cli/example_plugin/src/fenix_example_plugin/: __init__.py  cli.py
ff-cli/services/defaults/: minio.yaml  postgres.yaml  rabbitmq.yaml  redis.yaml
ff-cli/src/ff_cli/: __init__.py  branding.py  config.py  main.py  plugin_base.py  plugin_creator.py  plugin_manager.py  plugin_registry.py
ff-cli/src/ff_cli/.plugin_data/: registry.json
ff-cli/src/ff_cli/commands/: __init__.py  branding.py  doctor.py  plugins.py  scripts.py  services.py  status.py
ff-cli/src/ff_cli/plugin_helpers/: __init__.py  scripts.py  services.py
ff-cli/src/ff_cli/services/: __init__.py  manager.py  models.py
ff-cli/src/ff_cli/utils/: __init__.py  common.py  docker.py  editor.py  scaffold.py  shell.py
ff-cli/tests/: test_branding_cli.py  test_config.py  test_doctor.py  test_plugin_manager.py
ff-logger/: CHANGELOG.md  README.md  pyproject.toml
ff-logger/examples/: async_logging.py  context_binding.py  multiple_loggers.py  production_setup.py  usage_example.py
ff-logger/src/ff_logger/: __init__.py  base.py  config.py  console.py  database.py  json.py  null.py  processors.py  utils.py
ff-logger/tests/: test_base_logger.py  test_loggers.py  test_null_logger.py  test_reserved_fields.py  test_v040_features.py
ff-parsers/: LICENSE  README.md  pyproject.toml
ff-parsers/scripts/: manual_run_pipeline.py
ff-parsers/src/ff_parsers/: __init__.py  base.py  exceptions.py  factory.py  ingest.py  models.py
ff-parsers/src/ff_parsers/adapters/: __init__.py  fenix_agents.py
ff-parsers/src/ff_parsers/parsers/: __init__.py  docx_parser.py  email_parser.py  excel_parser.py  image_parser.py  pdf_parser.py  text_parser.py
ff-parsers/src/ff_parsers/pipeline/: __init__.py  ingest.py
ff-parsers/src/ff_parsers/renderers/: __init__.py  markdown.py  markitdown.py
ff-parsers/src/ff_parsers/utils/: __init__.py  attachments.py  cleaning.py  temp_file_manager.py  validation.py
ff-parsers/tests/: __init__.py  conftest.py  test_email_parser.py  test_factory.py  test_models.py  test_pipeline.py  test_text_parser.py
ff-storage/: CHANGELOG.md  OBJECT_STORAGE_HANDOFF.md  README.md  SCHEMA_SYNC_IMPLEMENTATION.md  pyproject.toml
ff-storage/docs/: FF_STORAGE_PYDANTIC_IMPLEMENTATION.md  FF_STORAGE_V3_IMPLEMENTATION_PLAN.md  FF_STORAGE_V3_PRODUCTION_GUIDE.md  README.md  quickstart_v3.md
ff-storage/docs/api/: pydantic_orm.md
ff-storage/docs/examples/: basic_product_model.py  regulation_scd2.py  schema_manager_example.py
ff-storage/docs/guides/: scd2_foreign_keys.md
ff-storage/src/ff_storage/: __init__.py  exceptions.py  health.py
ff-storage/src/ff_storage/db/: __init__.py  adapters.py  migrations.py  models.py  mysql.py  postgres.py  sql.py  sqlserver.py
ff-storage/src/ff_storage/db/connections/: postgres.py
ff-storage/src/ff_storage/db/query_builder/: __init__.py  mysql.py  sqlserver.py
ff-storage/src/ff_storage/db/schema_sync/: base.py  manager.py  normalizer.py  postgres.py
ff-storage/src/ff_storage/object/: azure_blob.py
ff-storage/src/ff_storage/pydantic_support/: __init__.py  base.py  introspector.py  repository.py  type_mapping.py
ff-storage/src/ff_storage/temporal/: repository_base.py
ff-storage/src/ff_storage/temporal/strategies/: __init__.py  base.py  copy_on_change.py  none.py  scd2.py
ff-storage/src/ff_storage/temporal/utils/: audit_query.py  cleanup.py  migration.py
ff-storage/src/ff_storage/utils/: __init__.py  metrics.py  retry.py  validation.py
ff-storage/tests/: test_mysql_pool.py  test_postgres_params.py  test_postgres_pool.py  test_pydantic_field_injection.py  test_sqlserver_pool.py
ff-storage/tests/integration/: conftest.py  test_connection_resilience.py  test_pydantic_schema_consistency.py  test_sql_reserved_keywords.py  test_temporal_strategies.py
ff-storage/tests/integration/fixtures/: real_world_models.py
ff-storage/tests/unit/: test_cache_mutation.py  test_database_adapter.py  test_index_where_clause_normalization.py  test_schema_normalizer.py  test_sql_identifier_quoting_fixed.py  test_where_clause_normalizer.py
packages_plugin/: README.md  pyproject.toml
packages_plugin/src/packages_plugin/: __init__.py  cli.py
packages_plugin/src/packages_plugin/commands/: __init__.py  github.py  list_cmd.py  pypi.py  setup.py  sync.py
packages_plugin/src/packages_plugin/utils/: __init__.py  auth.py  build.py  constants.py  github.py  pypi.py
scripts/: build_all.sh  build_package.sh  bump_version.sh  bump_version_from_registry.py  check_version_exists.sh  detect_changes.sh  mirror_to_github.sh  publish_if_new.sh  publish_to_pypi.sh  sync_package.sh  test_package.sh
src/ff_storage/db/schema_sync/: manager.py  normalizer.py  postgres.py
src/ff_storage/pydantic_support/: repository.py
src/ff_storage/temporal/: repository_base.py
src/ff_storage/temporal/strategies/: scd2.py
tests/integration/: conftest.py  test_connection_resilience.py  test_decimal_float_normalization.py  test_pydantic_schema_consistency.py  test_sql_reserved_keywords.py  test_temporal_strategies.py
tests/integration/fixtures/: real_world_models.py
tests/unit/: test_add_column_not_null.py  test_cache_mutation.py  test_float_type_normalization.py  test_postgres_normalizer.py  test_schema_normalizer.py  test_sql_identifier_quoting_fixed.py  test_type_mapping.py  test_where_clause_precedence_tdd.py
