[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ff-logger"
version = "0.1.0"
description = "Fenixflow structured logging package with scoped loggers"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "Fenixflow", email = "dev@fenixflow.com"}
]
dependencies = [
    "structlog>=24.0",
    "colorama>=0.4",  # For colored console output
    "python-json-logger>=2.0",  # For JSON formatting
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
database = [
    "psycopg2-binary>=2.9",  # For PostgreSQL support
    "pymysql>=1.1",  # For MySQL support
]

[project.urls]
repository = "https://gitlab.com/fenixflow/fenix-packages"
documentation = "https://gitlab.com/fenixflow/fenix-packages/-/tree/main/ff-logger"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
