[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "packages_plugin"
version = "0.1.0"
description = "Plugin to manage the self publishing of the packages for fenix"
readme = "README.md"
requires-python = ">=3.12"
license = "LicenseRef-Proprietary"
authors = [
    {name = "Ben", email = "ben@fenixflow.com"}
]
dependencies = [
    "typer>=0.16.0",
    "rich>=13.0.0",
    "twine>=5.0.0",
    "build>=1.0.0",
    "tomli>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
]

# Register the plugin with the active CLI brand
[project.entry-points."fenix.plugins"]
ff-packages = "packages_plugin.cli:plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/packages_plugin"]
